# jms_framework

./: CMakeLists.txt  README.md
_cmake_settings/: jmsf-al-qt-set-compiler-settings.cmake  (+10 more)
jmsf_tests_/: CMakeLists.txt
jmsf_tests_/sources/: jmsf_tests_main_entry.cpp
jmsf_tests_/sources/jmsf/: test_Template.cpp  tests_New_notation.cpp
jmsf_tests_/sources/jmsf/algorithming/: test_Mathematics.cpp
jmsf_tests_/sources/jmsf/algorithming/defaulting/: test_default_Comparator.cpp  test_default_Incomparator.cpp
jmsf_tests_/sources/jmsf/encodebuba/nativing/: test_native_Shared.cpp  test_native_Weak.cpp
jmsf_tests_/sources/jmsf/memorying/: test_Memory_pointer.cpp  test_Multiple_inheritance_pointing_arithmetics.cpp  test_Object_pointer.cpp  test_Omp.cpp  test_Womp.cpp
jmsf_tests_/sources/jmsf/memorying/testing/: Memorying_testing_class.cpp  Memorying_testing_class.h  Memorying_testing_class.hxx
jmsf_tests_/sources/jmsf/memorying/testing_mipa/: Diamond_child.cpp  Diamond_child.h  Diamond_child.hxx  Interface_parent.cpp  Interface_parent.h  Interface_parent.hxx  Mixin_parent.cpp  Mixin_parent.h  Mixin_parent.hxx  Template_parent.hin  Template_parent.hpp  Template_parent.hxx  Virtual_parent.cpp  Virtual_parent.h  Virtual_parent.hxx
jmsf_tests_/sources/jmsf/pointing/: internal_tests_cNonlinked.cpp  pre_tests_Nonlinked.cpp  pre_tests_Nonlinked.hxx  pre_tests_Scoped.cpp  pre_tests_Scoped.hxx  pre_tests_Shared.cpp  pre_tests_Shared.hxx  pre_tests_Weak.cpp  pre_tests_Weak.hxx  pre_tests_cNonlinked.cpp  pre_tests_cNonlinked.hxx  pre_tests_cScoped.cpp  pre_tests_cScoped.hxx  pre_tests_cShared.cpp  pre_tests_cShared.hxx  pre_tests_cWeak.cpp  pre_tests_cWeak.hxx  test_Nonlinked.cpp  test_Scoped.cpp  test_Shared.cpp  test_Weak.cpp  test_cNonlinked.cpp  test_cScoped.cpp  test_cShared.cpp  test_cWeak.cpp  test_xWeak.cpp  tests_xWeak.hxx
jmsf_tests_/sources/jmsf/pointing/testing/: Pointing_testing_class.cpp  Pointing_testing_class.h  Pointing_testing_class.hxx  Scoped_omp.hin  Scoped_omp.hpp  Scoped_omp.hxx  test_Scoped_omp.cpp
jmsf_tests_/sources/jmsf/pointing_old/: test_Pointer.cpp
jmsf_tests_/sources/jmsf/pointing_old/sensing/: factory_Sensing.cpp  factory_Sensing.h  sensing_Pointie.cpp  sensing_Pointie.h  sensing_Pointie.hxx
jmsf_tests_/sources/jmsf/pointing_old/testing/: factory_Pointie_and_Proxie.cpp  factory_Pointie_and_Proxie.h  testing_Pointie.cpp  testing_Pointie.h  testing_Pointie.hxx  testing_Proxie.xcpp  testing_Proxie.xh  testing_Proxie.xhxx
jmsf_tests_/sources/jmsf/sensing/: sensation_of_Construction_and_destruction.cpp  sensation_of_Construction_and_destruction.h  sensation_of_Construction_and_destruction.hxx
jmsf_tests_/sources/jmsf/structing/: avl-test.xc  tavl-test.xc  test.xc
jmsf_tests_/sources/jmsf/structing/containing/: Avl_tree_test_fixtures.h  test_Avl_tree.cpp  test_Stack.cpp  test_Tavl_tree.cpp
jmsf_tests_/sources/jmsf/structing/noding/: Avl_tree_node_test_fixture.h  test_Avl_tree_node.cpp  test_Tavl_node.cpp  testing_Tavl_node_typedefs.hxx
jmsf_tests_/sources/jmsf/testing/: Testing_object_creator.hin  Testing_object_creator.hpp  Testing_object_creator.hxx  testing_Allocators.cpp  testing_Allocators.h  testing_Environment.cpp  testing_Environment.h  testing_Environment.hxx  testing_Factory_maintainer.cpp  testing_Factory_maintainer.h  testing_Factory_maintainer.hxx
jmsf_tests_/sources/jmsf/typeing/: test_Comparison_result.cpp
jmsf_tests_/sources/tdd_learning/: test_Money.cpp
(+779 files in other folders)
